AUTOMAKE_OPTIONS = nostdinc
AM_CXXFLAGS = -std=c++17 -I $(top_srcdir)/code/include
lib_LIBRARIES = libswoc-static-1.3.1.a

libswoc_static_1_3_1_a_SOURCES = \
	ArenaWriter.cc \
	bw_format.cc \
	bw_ip_format.cc \
	Errata.cc \
	MemArena.cc \
	RBTree.cc \
	string_view_util.cc \
	swoc_file.cc \
	swoc_ip.cc \
	TextView.cc
 
